# mat

./: CMakeLists.txt
code/: CMakeLists.txt
code/include/: mat.hpp
code/src/: mat.cpp
examples/: CMakeLists.txt
examples/matrix_2x2/: CMakeLists.txt  matrix_2x2.cpp
include/: mat.hpp
src/: mat.cpp
test/: CMakeLists.txt  mat_operations.cpp
